# diacono-ia

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/diacono_categ/: agent.py  classifier.py  extractor.py  get_file_s3.py  lista_categorias.json  regras_categorias.json  schemas.py
src/diacono_categ/.cache/diacono-ia/: regras_categorias.json
src/diacono_categ/resource/: lista_categorias.json  regras_categorias.json
src/diacono_ia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_get_file_s3.py
