[project]
name = "diacono-ia"
version = "0.1.0"
description = "Lib para auxiliar na categorização de custos nas transações debito e credito"
authors = [{name = "Andre"}]
dependencies = [
    "pydantic",
    "langchain",
    "openai"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"